--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -146,7 +146,8 @@ body {
   align-items: center; 
   background-color: #f3f3f3;
   min-height: 35vh;
-  width: 100%;
+  
+  
   padding: 0;
   margin: 0;
   padding-top: 0%;
@@ -240,16 +241,18 @@ body {
   padding-top: 0;
 } 
 .table1 {  
-  max-width: 30%;
-  height: 100%;
+  min-width: 30%;
+  width: max-content;
   display: flex;
   flex-direction: column;
   justify-content: center;
   font-family: 'Rubik', sans-serif;
   text-align: left;
   background-color: #f3f3f3;
-  margin: 1%;
-  padding: 5%;
+  margin: 0%;
+  margin-left: 1em;
+  margin-right: 1em;
+  padding: 1em;
 }
 .table2 {  
   width: 50%;
@@ -297,7 +300,7 @@ body {
   margin-top: 2em;
 }
 .table3#col1 {  
-  width: 50%;
+  width: 100%;
   display: block;
   justify-content: center;
   font-family: 'Rubik', sans-serif;
@@ -307,7 +310,7 @@ body {
   padding: 3em;
 }
 .table3#col2 {  
-  width: 50%;
+  width: 100%;
   display: block;
   justify-content: center;
   font-family: 'Rubik', sans-serif;
@@ -472,7 +475,6 @@ footer {
 }
 footer p {  
   font-weight: 300;
-  margin-left: 5em;
 }
 
 
@@ -498,15 +500,201 @@ footer p {
 
 @media (min-width: 768px) and (max-width: 1199px) {
   .content-container {
-      width: 85%;
-  }
-  nav ul {
-    justify-content: center; 
+    width: 95%;
   }
   .burger-icon {
-    display: none;
+    display: block;
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    z-index: 1001;
   }
+  nav {
+    position: fixed;
+    width: 100%;
+    color: white;
+    z-index: 1000;
+    display: flex;
+    justify-content: center; /* Wyśrodkowanie */
+    align-items: center; /* Wyśrodkowanie */
+    transition: all 0.3s ease;
+  }
+  nav ul {
+    display: none;
+    list-style: none;
+    width: 100%; /* Pełna szerokość */
+    text-align: center; /* Wyśrodkowanie tekstu */
+  }
+  .nav-active {
+    display: block; 
+    background: rgba(51, 51, 51, 0.8); 
+    margin-bottom: 2em;
+  }
+  .nav-active li {
+    padding: 0.5em;
+  }
+  .navbar_logo {
+    transition: opacity 0.3s ease;
+  }
+  .hide-logo {
+    opacity: 0; /* Ukrywanie logo */
+  }
+  nav a {
+    text-decoration: none; 
+    color: #f3f3f3; 
+    font-weight: 300;
+    font-size: 1em;
+    transition: color 0.3s; 
+  } 
+  .content-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .table1 {  
+    max-width: 80%;
+    margin-bottom: 2em;
+  }
+  .table2 {  
+    width: 100%;
+    margin-bottom: 2em;
+  }
+  .table3 {  
+    width: 100%;
+    margin-bottom: 2em;
+    padding: 0;
+    padding-bottom: 2em;
+  }
+  .content-container#cont4 {
+    flex-direction: column-reverse;
+  }
+  .content-container#cont6 {
+    padding: 0;
+  }
+  .table3 h2{
+    text-align: center;
+  }
+  .table3 h3{
+    text-align: center;
+  }
+  .table3 p{
+    text-align: center;
+  }
+  .table3#col1{
+    width: 100%;
+  }
+  .form{
+    width: auto;
+  }
+  .contact_tab {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  .page#contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: baseline; 
+    align-items: center; 
+    background-color: #f3f3f3;
+    height: 110vh;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    padding-top: 0%;
+  } 
+  .content-container#cont5 {
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    height: 20em;
+    width: 100%;
+    border-radius: 2em 2em 0em 0em ;
+    background-image: url('map_1.png'); 
+    background-size: cover;
+    background-position: center; 
+    position: relative;
+    margin: 0;
+    padding: 0;
+    z-index: 0;
+  }
+  .content-container#cont6 {
+    height: auto;
+    width: 75%;
+    margin: 0;
+    margin-top: 20em;
+    border-radius: 2em;
+    z-index: 1;
+    background-color: #f3f3f3;
+    display: block;
+    min-height: 50vh;
+  }
+  .contact_data {
+    border-radius: 1em;
+    z-index: 1;
+    background-color: #fff;
+    margin: auto;
+    padding: 2em;
+    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
+  }
+  .contact_data h1 {
+    text-align: center;
+    font-family: 'Rubik', sans-serif;
+    font-weight: 600;
+    font-size: 1.5em;
+    color: #333;
+  }
+  .contact_tab {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+    padding-top: 2em;
+  }
+  
+  .contact_col {
+    padding-left: 3em;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    height: 100%; 
+    
+    align-items: left;
+    padding: 0;
+    margin-bottom: 2em;
+  }
+  .contact_col h2{
+    text-align: center;
+    font-family: 'Rubik', sans-serif;
+    font-weight: 400;
+    font-size: 1em;
+    color: #333;
+    padding-left: 2em;
+    text-align: center;
+    width: 100%;
+    padding: 0;
+    padding-bottom: 0.5em;
+  }
+  .contact_col h3{
+    text-align: center;
+    font-family: 'Rubik', sans-serif;
+    font-weight: 400;
+    font-size: 0.8em;
+    color: #666;
+    padding-left: 2em;
+    
+    padding: 0;
+  }
+  .table22{
+    width: 80%;
+    margin: 0;
+    margin-bottom: 2em;
+  }
+  
 }
+
 
 
 @media (max-width: 767px) {
@@ -608,7 +796,7 @@ footer p {
     justify-content: baseline; 
     align-items: center; 
     background-color: #f3f3f3;
-    height: 80vh;
+    height: 110vh;
     width: 100%;
     padding: 0;
     margin: 0;
@@ -698,6 +886,10 @@ footer p {
     
     padding: 0;
   }
- 
+  .table22{
+    width: 100%;
+    margin: 0;
+    margin-bottom: 2em;
+  }
   
 }
