--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -459,6 +459,10 @@ nav a {
   font-size: small;
   transition: color 0.3s; 
 } 
+
+#language:hover {
+  color: #2B70E4;
+}
 nav a:hover {
   color: #bbb; 
   text-decoration: none;
@@ -503,50 +507,8 @@ footer p {
     width: 95%;
   }
   .burger-icon {
-    display: block;
-    position: fixed;
-    top: 10px;
-    right: 10px;
-    cursor: pointer;
-    z-index: 1001;
+    display: none; 
   }
-  nav {
-    position: fixed;
-    width: 100%;
-    color: white;
-    z-index: 1000;
-    display: flex;
-    justify-content: center; /* Wyśrodkowanie */
-    align-items: center; /* Wyśrodkowanie */
-    transition: all 0.3s ease;
-  }
-  nav ul {
-    display: none;
-    list-style: none;
-    width: 100%; /* Pełna szerokość */
-    text-align: center; /* Wyśrodkowanie tekstu */
-  }
-  .nav-active {
-    display: block; 
-    background: rgba(51, 51, 51, 0.8); 
-    margin-bottom: 2em;
-  }
-  .nav-active li {
-    padding: 0.5em;
-  }
-  .navbar_logo {
-    transition: opacity 0.3s ease;
-  }
-  .hide-logo {
-    opacity: 0; /* Ukrywanie logo */
-  }
-  nav a {
-    text-decoration: none; 
-    color: #f3f3f3; 
-    font-weight: 300;
-    font-size: 1em;
-    transition: color 0.3s; 
-  } 
   .content-container {
     display: flex;
     flex-direction: column;
@@ -746,6 +708,7 @@ footer p {
     font-size: 1em;
     transition: color 0.3s; 
   } 
+
   .content-container {
     display: flex;
     flex-direction: column;
