--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,110 +1,126 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-html, body {
-    height: 100%; 
-    margin: 0;
-    padding: 0;
-  }
+
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
 
 body {
-    font-family: 'Rubik', sans-serif;
-    font-size: 16px;
-    line-height: 1.6;
-    color: #333;
-    background-color: #f3f3f3;
-    padding-top: 0px;
-    display: flex;
-    flex-direction: column;
-} 
-/* KONTENERY */  
+  font-family: 'Rubik', sans-serif;
+  font-size: 16px;
+  line-height: 1.6;
+  color: #333;
+  background-color: #f3f3f3;
+  padding-top: 0px;
+  display: flex;
+  flex-direction: column;
+}
+
+/* KONTENERY */
 .page {
-    min-height: fit-content; 
-    display: block;
-    justify-content: top; 
-    align-items: top; 
-    padding-top: 2em;
-  } 
-.page#page1{
+  min-height: fit-content;
+  display: block;
+  justify-content: top;
+  align-items: top;
+  padding-top: 2em;
+}
+
+.page#page1 {
   height: 85vh;
 }
+
 .background#home {
   display: flex;
-  justify-content: center; 
-  align-items: center; 
+  justify-content: center;
+  align-items: center;
   height: 100%;
   width: 100%;
-  background-image: url('background5.jpg'); 
+  background-image: url('background5.jpg');
   background-size: cover;
   background-position: center;
-  position: relative; 
+  position: relative;
 }
+
 .page#web_solutions {
   background-color: #666;
   padding-bottom: 5%;
-  
-  background-image: url('background6.jpg'); 
+
+  background-image: url('background6.jpg');
   background-size: cover;
   background-position: center;
 }
+
 .page#form {
-  background-color: #f3f3f3; 
+  /* display: none; */
+  background-color: #f3f3f3;
   min-height: fit-content;
-} 
+}
+
 .content-container {
   margin: 0 auto;
   max-width: 1200px;
   text-align: center;
   margin-top: 1em;
 }
+
 .content-container#home h1 {
-  font-size: 2.5em; 
+  font-size: 2.5em;
   font-family: 'Rubik', sans-serif;
   margin-bottom: 0.5em;
 }
 
 .content-container p {
   font-family: 'Rubik', sans-serif;
-  font-size: 1.5em; 
-  color: #333; 
+  font-size: 1.5em;
+  color: #333;
   margin-bottom: 1em;
 }
+
 .content-container button {
   padding: 15px 25px;
-  background-color:transparent;
-  border-radius:10px;
-	border:1px solid #333;
+  background-color: transparent;
+  border-radius: 10px;
+  border: 1px solid #333;
   cursor: pointer;
   font-family: 'Rubik', sans-serif;
   font-size: 1em;
   font-weight: 300;
   color: #333;
-} 
+}
+
 .content-container button:hover {
-  background-color: #333; 
+  background-color: #333;
   color: #f3f3f3;
   transition: 250ms;
 }
+
 .advert#home {
   display: flex;
   height: 0;
-  align-items:center;
+  align-items: center;
 }
+
 .content-container#advert {
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #f3f3f3;
-  
+
   background-color: #ad4343;
   height: 75%;
 }
+
 .content-container#advert p {
   text-align: center;
   color: #333;
 }
+
 .content-container#cont1 {
   display: flex;
   justify-content: center;
@@ -119,18 +135,21 @@ body {
   justify-content: center;
   align-items: top;
 }
-.content-container#cont2 :hover:not(.table1 *){
-  background-color: #f3f3f3;  
+
+.content-container#cont2 :hover:not(.table1 *) {
+  background-color: #f3f3f3;
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2);
 
 }
+
 .content-container#cont1 h1 {
   color: #f3f3f3;
-  font-size: 2.5em; 
+  font-size: 2.5em;
   font-family: 'Rubik', sans-serif;
   font-weight: 500;
   margin-bottom: 1em;
 }
+
 .content-container#cont3 {
   display: flex;
   justify-content: center;
@@ -138,46 +157,52 @@ body {
   height: 100%;
   margin-top: 0;
 }
-.content-container#cont3 :hover:not(.table2, .table2 *, .table22 *){
-  background-color: #f3f3f3;  
+
+.content-container#cont3 :hover:not(.table2, .table2 *, .table22 *) {
+  background-color: #f3f3f3;
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2);
 }
+
 .content-container#cont3 :hover:not(.table2, .table2 *, .table22 *) .myicon {
   color: #2B70E4;
 }
+
 .content-container#cont4 {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100%;
 }
+
 .page#contact {
   display: flex;
   flex-direction: column;
-  justify-content: baseline; 
-  align-items: center; 
+  justify-content: baseline;
+  align-items: center;
   background-color: #f3f3f3;
   min-height: 35vh;
-  
-  
+
+
   padding: 0;
   margin: 0;
   padding-top: 0%;
-} 
+}
+
 .content-container#cont5 {
   display: flex;
-  justify-content: center; 
-  align-items: center; 
+  justify-content: center;
+  align-items: center;
   min-height: 35vh;
   width: 100%;
-  background-image: url('map_2.png'); 
-  background-size:cover;
-  background-position: center; 
+  background-image: url('map_2.png');
+  background-size: cover;
+  background-position: center;
   position: relative;
   margin: 0;
   padding: 0;
   z-index: 0;
 }
+
 .content-container#cont6 {
   min-height: 35vh;
   height: 100%;
@@ -187,13 +212,15 @@ body {
   background-color: #fff;
   display: block;
   margin-top: 0;
-  
+
 }
+
 .contact_data {
   z-index: 1;
   background-color: #fff;
   margin: auto;
 }
+
 .contact_data h1 {
   margin-top: 2em;
   text-align: center;
@@ -202,6 +229,7 @@ body {
   font-size: 1.5em;
   color: #333;
 }
+
 .contact_tab {
   display: flex;
   flex-direction: column-reverse;
@@ -222,9 +250,10 @@ body {
   display: flex;
   flex-direction: column;
   align-items: baseline;
-  height: 100%; 
+  height: 100%;
 }
-.contact_col h2{
+
+.contact_col h2 {
   text-align: left;
   font-family: 'Rubik', sans-serif;
   font-weight: 400;
@@ -232,7 +261,8 @@ body {
   color: #333;
   padding-left: 0em;
 }
-.contact_col h3{
+
+.contact_col h3 {
   text-align: left;
   font-family: 'Rubik', sans-serif;
   font-weight: 400;
@@ -244,15 +274,17 @@ body {
 .content-container#cont1 h2 {
   text-align: left;
   color: #333;
-  
+
   margin: 0;
   padding: 0;
 }
+
 .page#case_studies {
-  background-color: #fff; 
+  background-color: #fff;
   padding-top: 0;
-} 
-.table1 {  
+}
+
+.table1 {
   min-width: 30%;
   width: max-content;
   display: flex;
@@ -268,7 +300,7 @@ body {
   border-radius: 1em;
 }
 
-.table2 {  
+.table2 {
   width: 50%;
   display: block;
   flex-direction: column;
@@ -279,7 +311,8 @@ body {
   margin: 2em;
   padding: 2em;
 }
-.table22{
+
+.table22 {
   width: 50%;
   display: block;
   flex-direction: column;
@@ -289,7 +322,7 @@ body {
   background-color: transparent;
   margin-top: 3em;
   margin-left: 2em;
-  margin-right: 2em;  
+  margin-right: 2em;
   margin-bottom: 3em;
   padding: 2em;
   border-style: solid;
@@ -297,7 +330,7 @@ body {
   border-radius: 1em;
 }
 
-.table22 h2{
+.table22 h2 {
   margin-top: 2em;
   text-align: center;
   font-family: 'Rubik', sans-serif;
@@ -305,7 +338,8 @@ body {
   font-size: 1.5em;
   color: #333;
 }
-.table22 p{
+
+.table22 p {
   text-align: center;
   font-family: 'Rubik', sans-serif;
   font-weight: 400;
@@ -314,7 +348,8 @@ body {
   margin-bottom: 2em;
   margin-top: 2em;
 }
-.table3#col1 {  
+
+.table3#col1 {
   width: 100%;
   display: block;
   justify-content: center;
@@ -324,7 +359,8 @@ body {
   margin: 0;
   padding: 3em;
 }
-.table3#col2 {  
+
+.table3#col2 {
   width: 100%;
   display: block;
   justify-content: center;
@@ -339,21 +375,24 @@ body {
   max-width: 75%;
   width: 300px;
 }
-.table1#col2 h1{
-  text-align: center;  
+
+.table1#col2 h1 {
+  text-align: center;
   font-family: 'Rubik', sans-serif;
   font-weight: 500;
   font-size: 2em;
   color: #f3f3f3;
 }
-.table1 h2{
+
+.table1 h2 {
   text-align: center;
   font-family: 'Rubik', sans-serif;
   font-weight: 600;
   font-size: 1.5em;
   color: #333;
 }
-.table1 p{
+
+.table1 p {
   text-align: center;
   font-family: 'Rubik', sans-serif;
   font-weight: 400;
@@ -361,14 +400,16 @@ body {
   margin-top: 2em;
   color: #333;
 }
-.table2 h2{
+
+.table2 h2 {
   text-align: center;
   font-family: 'Rubik', sans-serif;
   font-weight: 600;
   font-size: 1.5em;
   color: #333;
 }
-.table2 p{
+
+.table2 p {
   text-align: center;
   font-family: 'Rubik', sans-serif;
   font-weight: 400;
@@ -376,28 +417,32 @@ body {
   color: #333;
   margin-top: 2em;
 }
-.table3 h2{
+
+.table3 h2 {
   text-align: left;
   font-family: 'Rubik', sans-serif;
   font-weight: 600;
   font-size: 1.5em;
   color: #333;
 }
-.table3 h3{
+
+.table3 h3 {
   text-align: left;
   font-family: 'Rubik', sans-serif;
   font-weight: 400;
   font-size: 1em;
   color: #333;
 }
-.table3 p{
+
+.table3 p {
   text-align: left;
   font-family: 'Rubik', sans-serif;
   font-weight: 400;
   font-size: 1em;
   color: #bbb;
 }
-.form{
+
+.form {
   background-color: #fff;
   width: 100%;
   display: flex;
@@ -408,6 +453,7 @@ body {
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
   padding-bottom: 3em;
 }
+
 .circle {
   background-color: #2B70E4;
   width: 5em;
@@ -421,10 +467,12 @@ body {
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
   margin-bottom: 2em;
 }
+
 .imageCol1 {
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
   border-radius: 1em;
 }
+
 .myicon :hover {
   color: #2B70E4;
   transition: color 0.3s;
@@ -432,43 +480,48 @@ body {
 
 /* Navbar ------------------------------------------------------------- */
 nav {
-  position: fixed; 
-  width: 100%;     
-  background: #333; 
-  color: #f3f3f3;   
+  position: fixed;
+  width: 100%;
+  background: #333;
+  color: #f3f3f3;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
-  z-index: 1000;   
-  transition: background-color 0.3s, box-shadow 0.3s; 
+  z-index: 1000;
+  transition: background-color 0.3s, box-shadow 0.3s;
   display: flex;
   flex-direction: row;
   justify-content: center;
   margin: 0;
   padding: 0;
 }
+
 .navbar {
   display: flex;
   justify-content: space-between;
   width: 1200px;
 }
+
 .burger-icon {
-  cursor: pointer;  
-} 
+  cursor: pointer;
+}
+
 nav ul {
   list-style: none;
   padding: 0;
   display: flex;
   margin: 0;
-} 
-nav li {
-  margin: 0 15px; 
 }
+
+nav li {
+  margin: 0 15px;
+}
+
 nav a {
-  text-decoration: none; 
-  color: #666; 
+  text-decoration: none;
+  color: #666;
   font-weight: 300;
   font-size: small;
-  transition: color 0.2s; 
-} 
+  transition: color 0.2s;
+}
 
 #language {
   color: #f3f3f3;
@@ -488,21 +541,24 @@ nav a {
   transition: color 0.3s;
   border-width: 1px;
 }
+
 nav a:hover {
-  color: #f3f3f3; 
+  color: #f3f3f3;
   text-decoration: none;
 }
+
 footer {
   background-color: #333;
   color: white;
   display: flex;
   align-items: center;
   justify-content: center;
-  text-align: center; 
-  padding: 1em; 
-  font-weight: 300;   
+  text-align: center;
+  padding: 1em;
+  font-weight: 300;
 }
-footer p {  
+
+footer p {
   font-weight: 300;
 }
 
@@ -511,19 +567,48 @@ footer p {
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
   border-radius: 1em;
 }
+
 .footer_logo:hover {
 
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
 }
 
+.facebookLinkContainer {
+  position: fixed;
+  left: 1em;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: white;
+  padding: 0;
+  border: 1px solid #ccc;
+  z-index: 1000;
+  border-radius: 1em;
+  display: flex;
+  flex-direction: column;
+
+}
+
+.facebookLinkContainer a {
+
+  padding: 1em;
+  border: 0px solid #ccc;
+  z-index: 1000;
+  border-radius: 1em;
+}
+
+.facebookLinkContainer a:hover {
+  background-color: #2B70E4;
+}
+
 
 @media (min-width: 1200px) {
   .content-container {
-      width: 80%;
-      margin: 0 auto;
+    width: 80%;
+    margin: 0 auto;
   }
+
   .burger-icon {
-    display: none; 
+    display: none;
   }
 }
 
@@ -531,8 +616,9 @@ footer p {
   .content-container {
     width: 95%;
   }
+
   .burger-icon {
-    display: none; 
+    display: none;
   }
 
   .content-container {
@@ -540,72 +626,86 @@ footer p {
     flex-direction: column;
     align-items: center;
   }
-  .table1 {  
+
+  .table1 {
     max-width: 80%;
     margin-bottom: 2em;
   }
-  .table2 {  
+
+  .table2 {
     width: 100%;
     margin-bottom: 2em;
   }
-  .table3 {  
+
+  .table3 {
     width: 100%;
     margin-bottom: 2em;
     padding: 0;
     padding-bottom: 2em;
   }
+
   .content-container#cont4 {
     flex-direction: column-reverse;
   }
+
   .content-container#cont6 {
     padding: 0;
   }
-  .table3 h2{
+
+  .table3 h2 {
     text-align: center;
   }
-  .table3 h3{
+
+  .table3 h3 {
     text-align: center;
   }
-  .table3 p{
+
+  .table3 p {
     text-align: center;
   }
-  .table3#col1{
+
+  .table3#col1 {
     width: 100%;
   }
-  .form{
+
+  .form {
     width: auto;
   }
+
   .contact_tab {
     display: flex;
     flex-direction: column-reverse;
   }
+
   .page#contact {
     display: flex;
     flex-direction: column;
-    justify-content: baseline; 
-    align-items: center; 
+    justify-content: baseline;
+    align-items: center;
     background-color: #f3f3f3;
     height: 110vh;
     width: 100%;
     padding: 0;
     margin: 0;
     padding-top: 0%;
-  } 
+  }
+
   .content-container#cont5 {
     display: flex;
-    justify-content: center; 
-    align-items: center; 
+    justify-content: center;
+    align-items: center;
     height: 20em;
     width: 100%;
-    border-radius: 2em 2em 0em 0em ;
-    background-image: url('map_1.png'); 
+    border-radius: 2em 2em 0em 0em;
+    background-image: url('map_1.png');
     background-size: cover;
-    background-position: center; 
+    background-position: center;
     position: relative;
     margin: 0;
     padding: 0;
     z-index: 0;
   }
+
   .content-container#cont6 {
     height: auto;
     width: 75%;
@@ -618,6 +718,7 @@ footer p {
     display: block;
     min-height: 10vh;
   }
+
   .contact_data {
     border-radius: 1em;
     z-index: 1;
@@ -626,6 +727,7 @@ footer p {
     padding: 2em;
     box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
   }
+
   .contact_data h1 {
     text-align: center;
     font-family: 'Rubik', sans-serif;
@@ -633,6 +735,7 @@ footer p {
     font-size: 1.5em;
     color: #333;
   }
+
   .contact_tab {
     display: flex;
     align-items: center;
@@ -641,20 +744,21 @@ footer p {
     padding: 0;
     padding-top: 2em;
   }
-  
+
   .contact_col {
     padding-left: 3em;
     margin: 0;
     display: flex;
     flex-direction: column;
     align-items: baseline;
-    height: 100%; 
-    
+    height: 100%;
+
     align-items: left;
     padding: 0;
     margin-bottom: 2em;
   }
-  .contact_col h2{
+
+  .contact_col h2 {
     text-align: center;
     font-family: 'Rubik', sans-serif;
     font-weight: 400;
@@ -666,22 +770,24 @@ footer p {
     padding: 0;
     padding-bottom: 0.5em;
   }
-  .contact_col h3{
+
+  .contact_col h3 {
     text-align: center;
     font-family: 'Rubik', sans-serif;
     font-weight: 400;
     font-size: 0.8em;
     color: #666;
     padding-left: 2em;
-    
+
     padding: 0;
   }
-  .table22{
+
+  .table22 {
     width: 80%;
     margin: 0;
     margin-bottom: 2em;
   }
-  
+
 }
 
 
@@ -690,6 +796,7 @@ footer p {
   .content-container {
     width: 95%;
   }
+
   #language {
     color: #f3f3f3;
     border-style: solid;
@@ -698,7 +805,7 @@ footer p {
     padding: 0.5em 2em 0.5em 2em;
     border-width: 1px;
   }
-  
+
   #language:hover {
     color: #f3f3f3;
     border-style: solid;
@@ -707,6 +814,7 @@ footer p {
     padding: 0.5em 2em 0.5em 2em;
     border-width: 1px;
   }
+
   .burger-icon {
     display: block;
     position: fixed;
@@ -715,115 +823,141 @@ footer p {
     cursor: pointer;
     z-index: 1001;
   }
+
   nav {
     position: fixed;
     width: 100%;
     color: white;
     z-index: 1000;
     display: flex;
-    justify-content: center; /* Wyśrodkowanie */
-    align-items: center; /* Wyśrodkowanie */
+    justify-content: center;
+    /* Wyśrodkowanie */
+    align-items: center;
+    /* Wyśrodkowanie */
     transition: all 0.3s ease;
   }
+
   nav ul {
     display: none;
     list-style: none;
-    width: 100%; /* Pełna szerokość */
-    text-align: center; /* Wyśrodkowanie tekstu */
+    width: 100%;
+    /* Pełna szerokość */
+    text-align: center;
+    /* Wyśrodkowanie tekstu */
   }
+
   .nav-active {
-    display: block; 
-    background: rgba(51, 51, 51, 0.8); 
+    display: block;
+    background: rgba(51, 51, 51, 0.8);
     margin-bottom: 2em;
   }
+
   .nav-active li {
     padding: 0.5em;
   }
+
   .navbar_logo {
     transition: opacity 0.3s ease;
   }
+
   .hide-logo {
-    opacity: 0; /* Ukrywanie logo */
+    opacity: 0;
+    /* Ukrywanie logo */
   }
+
   nav a {
-    text-decoration: none; 
-    color: #f3f3f3; 
+    text-decoration: none;
+    color: #f3f3f3;
     font-weight: 300;
     font-size: 1em;
-    transition: color 0.3s; 
-  } 
+    transition: color 0.3s;
+  }
 
   .content-container {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
-  .table1 {  
+
+  .table1 {
     max-width: 80%;
     margin-bottom: 2em;
   }
-  .table2 {  
+
+  .table2 {
     width: 100%;
     margin-bottom: 2em;
   }
-  .table3 {  
+
+  .table3 {
     width: 100%;
     margin-bottom: 2em;
     padding: 0;
     padding-bottom: 2em;
   }
+
   .content-container#cont4 {
     flex-direction: column-reverse;
   }
+
   .content-container#cont6 {
     padding: 0;
   }
-  .table3 h2{
+
+  .table3 h2 {
     text-align: center;
   }
-  .table3 h3{
+
+  .table3 h3 {
     text-align: center;
   }
-  .table3 p{
+
+  .table3 p {
     text-align: center;
   }
-  .table3#col1{
+
+  .table3#col1 {
     width: 100%;
   }
-  .form{
+
+  .form {
     width: auto;
   }
+
   .contact_tab {
     display: flex;
     flex-direction: column-reverse;
   }
+
   .page#contact {
     display: flex;
     flex-direction: column;
-    justify-content: baseline; 
-    align-items: center; 
+    justify-content: baseline;
+    align-items: center;
     background-color: #f3f3f3;
     height: 110vh;
     width: 100%;
     padding: 0;
     margin: 0;
     padding-top: 0%;
-  } 
+  }
+
   .content-container#cont5 {
     display: flex;
-    justify-content: center; 
-    align-items: center; 
+    justify-content: center;
+    align-items: center;
     height: 20em;
     width: 100%;
-    border-radius: 2em 2em 0em 0em ;
-    background-image: url('map_1.png'); 
+    border-radius: 2em 2em 0em 0em;
+    background-image: url('map_1.png');
     background-size: cover;
-    background-position: center; 
+    background-position: center;
     position: relative;
     margin: 0;
     padding: 0;
     z-index: 0;
   }
+
   .content-container#cont6 {
     height: auto;
     width: 75%;
@@ -835,6 +969,7 @@ footer p {
     display: block;
     min-height: 50vh;
   }
+
   .contact_data {
     border-radius: 1em;
     z-index: 1;
@@ -843,6 +978,7 @@ footer p {
     padding: 2em;
     box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
   }
+
   .contact_data h1 {
     text-align: center;
     font-family: 'Rubik', sans-serif;
@@ -850,6 +986,7 @@ footer p {
     font-size: 1.5em;
     color: #333;
   }
+
   .contact_tab {
     display: flex;
     align-items: center;
@@ -858,20 +995,21 @@ footer p {
     padding: 0;
     padding-top: 2em;
   }
-  
+
   .contact_col {
     padding-left: 3em;
     margin: 0;
     display: flex;
     flex-direction: column;
     align-items: baseline;
-    height: 100%; 
-    
+    height: 100%;
+
     align-items: left;
     padding: 0;
     margin-bottom: 2em;
   }
-  .contact_col h2{
+
+  .contact_col h2 {
     text-align: center;
     font-family: 'Rubik', sans-serif;
     font-weight: 400;
@@ -883,20 +1021,22 @@ footer p {
     padding: 0;
     padding-bottom: 0.5em;
   }
-  .contact_col h3{
+
+  .contact_col h3 {
     text-align: center;
     font-family: 'Rubik', sans-serif;
     font-weight: 400;
     font-size: 0.8em;
     color: #666;
     padding-left: 2em;
-    
+
     padding: 0;
   }
-  .table22{
+
+  .table22 {
     width: 100%;
     margin: 0;
     margin-bottom: 2em;
   }
-  
+
 }
