--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -585,15 +585,19 @@ footer p {
   border-radius: 1em;
   display: flex;
   flex-direction: column;
+  align-items: center;
 
 }
 
 .facebookLinkContainer a {
-
+  align-items: center;
+  text-align: center;
+  width: 100%;
   padding: 1em;
   border: 0px solid #ccc;
   z-index: 1000;
   border-radius: 1em;
+  cursor: pointer;
 }
 
 .facebookLinkContainer a:hover {
