--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -13,7 +13,7 @@ nav {
     align-items: center;
     margin: 0;
     padding: 0;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Albert Sans', sans-serif;
 }
 
 .navbar {
